# PrintLib

./: .gitignore  Cargo.toml  Readme.md
examples/color_encoder_test/: Cargo.toml
examples/color_encoder_test/src/: main.rs
examples/color_test/: Cargo.toml
examples/color_test/src/: main.rs
examples/emoji_test/: Cargo.toml
examples/emoji_test/src/: main.rs
examples/error_test/: Cargo.toml
examples/error_test/src/: main.rs
examples/logger_test/: Cargo.toml
examples/logger_test/src/: main.rs
examples/usagefactory_example/: Cargo.toml
examples/usagefactory_example/src/: main.rs
src/: arg.rs  colorize.rs  emoji.rs  error.rs  lib.rs  logr.rs
