[package]
name = "PrintLib"
author = "Cr0a3"
version = "1.2.0"
edition = "2021"
description = "The ultimative printling libary for Rust"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.34"
colored = "2.1.0"
