[package]
name = "PrintLib"
author = "Cr0a3"
version = "1.4.0"
repository  = "https://github.com/Toni-Graphics/PrintLib"
edition = "2021"
description = "The ultimative printing libary for Rust #cli #string #color #term_color"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.34"